-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Minh Diep <mdiep@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/b0a33ee3-3d3b-4e2f-b013-69907a2c55be
test_1 failed with the following error:
onyx-124vm4 crashed during racer test_1
Test session details:
clients: https://build.whamcloud.com/job/lustre-master/4435 - 4.18.0-477.10.1.el8_8.x86_64
servers: https://build.whamcloud.com/job/lustre-master/4435 - 4.18.0-477.10.1.el8_lustre.x86_64
<<Please provide additional information about the failure here>>
[29862.629564] LustreError: 1574076:0:(qmt_lock.c:928:qmt_id_lock_glimpse()) ASSERTION( lqe->lqe_gl ) failed:
[29862.636875] LustreError: 1574076:0:(qmt_lock.c:928:qmt_id_lock_glimpse()) LBUG
[29862.638223] Pid: 1574076, comm: qmt_reba_lustre 4.18.0-477.10.1.el8_lustre.x86_64 #1 SMP Fri Jun 9 05:54:33 UTC 2023
[29862.639951] Call Trace TBD:
[29862.640575] [<0>] libcfs_call_trace+0x6f/0xa0 [libcfs]
[29862.641523] [<0>] lbug_with_loc+0x3f/0x70 [libcfs]
[29862.642378] [<0>] qmt_reba_thread+0x961/0x9c0 [lquota]
[29862.643338] [<0>] kthread+0x134/0x150
[29862.644030] [<0>] ret_from_fork+0x35/0x40
[29862.644764] Kernel panic - not syncing: LBUG
[29862.645507] CPU: 1 PID: 1574076 Comm: qmt_reba_lustre Kdump: loaded Tainted: G OE --------- - - 4.18.0-477.10.1.el8_lustre.x86_64 #1
[29862.647607] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
[29862.648563] Call Trace:
[29862.649041] dump_stack+0x41/0x60
[29862.649645] panic+0xe7/0x2ac
[29862.650247] ? ret_from_fork+0x35/0x40
[29862.650915] lbug_with_loc.cold.8+0x18/0x18 [libcfs]
[29862.651786] qmt_reba_thread+0x961/0x9c0 [lquota]
[29862.652594] ? qmt_glimpse_lock.isra.20+0xfa0/0xfa0 [lquota]
[29862.653554] kthread+0x134/0x150
[29862.654122] ? set_kthread_struct+0x50/0x50
[29862.654842] ret_from_fork+0x35/0x40
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
racer test_1 - onyx-124vm4 crashed during racer test_1